--- a/style.css
+++ b/style.css
@@ -4,17 +4,20 @@ html {
   width: 100%;
   height: 100%;
 }
+
 body {
   z-index: 5;
   background-color: rgb(255, 255, 255);
   overflow: hidden;
   background-color: black;
 }
+
 .wrapped-up {
   position: relative;
   opacity: 1;
   cursor: context-menu;
 }
+
 /** TEXT SECTION **/
 
 .main-heading {
@@ -23,6 +26,7 @@ body {
   text-align: center;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
+
 .about-heading {
   position: relative;
   color: white;
@@ -30,12 +34,15 @@ body {
   border-bottom: 1px solid white;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
+
 .h-1 {
   font-family: "PT Sans Caption", sans-serif;
 }
+
 .h-2 {
   font-family: "PT Sans Caption", sans-serif;
 }
+
 .t1 {
   position: relative;
   color: white;
@@ -54,27 +61,25 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .home {
   z-index: 8;
-  opacity: 0;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  opacity: 1;
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/home.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .e_about {
   z-index: 8;
   opacity: 0;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/about.jpg");
   background-attachment: fixed;
   background-size: cover;
@@ -84,55 +89,51 @@ body {
 .e_photos {
   z-index: 9;
   opacity: 0;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/photos.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .e_team {
   z-index: 8;
-  opacity: 1;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  opacity: 0;
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/team.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .e_videos {
   z-index: 8;
   opacity: 0;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/videos.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .e_contact {
   z-index: 8;
   opacity: 0;
-  background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 0.7),
-      rgba(24, 22, 23, 0.7)
-    ),
+  background: linear-gradient(0deg,
+    rgba(10, 10, 10, 0.7),
+    rgba(24, 22, 23, 0.7)),
     url("assets/bg/contact.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 /** SECTIONS END **/
 
 /** MENU **/
@@ -151,6 +152,7 @@ body {
   border-top-left-radius: 1%;
   border-bottom-left-radius: 1%;
 }
+
 .box {
   position: relative;
   cursor: pointer;
@@ -165,6 +167,7 @@ body {
 .cancel-box {
   cursor: pointer;
 }
+
 .cancel-icon {
   position: absolute;
   float: right;
@@ -176,6 +179,7 @@ body {
   cursor: pointer;
   opacity: 0;
 }
+
 .hamburger {
   position: absolute;
   z-index: 200;
@@ -185,6 +189,7 @@ body {
   float: right;
   color: white !important;
 }
+
 /** MENU ICONS END **/
 /** MENU ENDS **/
 
@@ -197,11 +202,13 @@ body {
 .film-box:hover {
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
 }
+
 .strip-element {
   position: relative;
   width: 100%;
   height: auto;
 }
+
 .gl {
   position: absolute;
   font-size: 1.3em;
@@ -209,6 +216,7 @@ body {
   left: -3%;
   top: 45%;
 }
+
 .gr {
   position: absolute;
   font-size: 1.3em;
@@ -216,6 +224,7 @@ body {
   right: -3.5%;
   bottom: 35%;
 }
+
 .photo-content {
   position: absolute;
   margin: auto;
@@ -224,6 +233,7 @@ body {
   bottom: 0px;
   left: 0px;
 }
+
 /** PHOTOS END **/
 
 .content-container {
@@ -231,6 +241,7 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .about-content {
   position: absolute;
   color: white;
@@ -250,13 +261,16 @@ body {
   font-size: 2em;
   font-family: "PT Sans Caption", sans-serif;
 }
+
 .team-row {
   position: relative;
   top: 10%;
 }
+
 .team-column {
   position: relative;
   width: 100%;
   height: 25vh;
 }
+
 /** TEAM SECTION END **/
